# Django-Assignment

django_homework1/config/: settings.py
django_homework1/my_app/: views.py
django_homework1/my_app/templates/: user_list.html
django_homework2/: .gitignore  pyproject.toml
django_homework2/Desktop/django_homework/my_app/: urls.py  views.py
django_homework2/Desktop/oz_django/django_homework1/: pyproject.toml
django_homework2/Desktop/oz_django/django_homework1/config/: urls.py
django_homework2/Desktop/oz_django/django_homework1/my_app/templates/: user_info.html
django_homework2/config/: settings.py
django_homework2/todo/: admin.py  models.py  urls.py  views.py
django_homework2/todo/migrations/: 0001_initial.py
django_homework2/todo/templates/: todo_info.html  todo_list.html
django_homework3/: .gitignore  .python-version  pyproject.toml
django_homework3/config/: settings.py  urls.py
django_homework3/templates/: todo_list.html
django_homework3/templates/registration/: login.html  signup.html
django_homework3/todo/: models.py  urls.py  views.py
django_homework3/todo/migrations/: 0001_initial.py
django_homework3/users/: views.py
